[package]
name = "asn-win-wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30" }
asn-logger = { git = "https://github.com/amberskynet/asn-logger.git", version = "2.1.1", features = [] }
asn-wgpu = { path = "./modules/asn-wgpu" }
asn-node-quad = { path = "./modules/asn-node-quad" }
pollster = "0.4"
