[package]
name = "asn-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30" }
asn-logger = { git = "https://github.com/amberskynet/asn-logger.git", version = "2.1.1", features = [] }
asn-node-quad = { path = "../asn-node-quad" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "25.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0", default-features = false, features = [
    "wgsl",
    "webgl"
    #    "dx12",
    #    "metal",
    #    "webgpu",
] }
